--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="total_score_0_error">Total score cannot be 0!</string>
 
     <string name="name">by\nYan Wei</string>
+    <string name="title_activity_subject">SubjectActivity</string>
 </resources>
