--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,21 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_subject">GPA Calculator</string>
 
     <string name="assignment">Assessment</string>
     <string name="weightage">Weightage/%</string>
     <string name="score_received">Your score</string>
     <string name="total_score">Total score</string>
+    <string name="subject_name">Subject name</string>
     <string name="button_submit">Add</string>
     <string name="calculate">Calculate</string>
     <string name="clear">Clear</string>
-    <string name="title_activity_gpa">GPAActivity</string>
+    <string name="submit">Submit</string>
+    <string name="title_activity_gpa">Final GPA</string>
+
+
+    <!--Errors-->
     <string name="empty_error">Field cannot be empty!</string>
     <string name="weightage_101_error">Weightage cannot be more than 100%!</string>
     <string name="score_received_total_error">Score received cannot be more than total score!</string>
@@ -19,7 +25,7 @@
     <string name="empty_array_error">You have no entries!</string>
     <string name="total_weightage_101_error">Total weightage more than 100%! Remaining weightage:</string>
     <string name="total_score_0_error">Total score cannot be 0!</string>
+    <string name="subject_name_empty_error">Name your subject!</string>
 
     <string name="name">by\nYan Wei</string>
-    <string name="title_activity_subject">SubjectActivity</string>
 </resources>
