--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,17 +5,28 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_subject">GPA Calculator</string>
 
+    <!--Strings for GPADisplayActivity-->
     <string name="assignment">Assessment</string>
     <string name="weightage">Weightage/%</string>
     <string name="score_received">Your score</string>
     <string name="total_score">Total score</string>
-    <string name="subject_name">Subject name</string>
-    <string name="add">Add</string>
     <string name="calculate">Calculate</string>
     <string name="clear">Clear</string>
     <string name="submit">Submit</string>
     <string name="edit">Edit</string>
-    <string name="clear_text">Clear Text</string>
+
+    <!--Strings for SubjectDisplayActivity-->
+    <string name="subject_name">Subject name</string>
+    <string name="add">Add</string>
+
+
+
+
+    <!--Alert Dialog Strings-->
+    <string name="delete">Delete</string>
+    <string name="delete_subj_cfm">Are you sure you want to delete this subject?</string>
+    <string name="delete_assign_cfm">Are you sure you want to delete this assignment?</string>
+
     <string name="title_activity_gpa">Final GPA</string>
 
 
